--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,13 @@ body{
     
 }
 
+.wrapper{
+    max-width: 1161px;
+    min-height: 100%;
+    margin: 0 auto;
+
+}
+
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
@@ -126,8 +133,7 @@ textarea:hover{
 
 
 .logo:active{
-     opacity: 0.3;
-    
+     opacity: 0.3;  
 }
 
 
@@ -135,6 +141,39 @@ textarea:hover{
 
 /* main */
 
+.slider-picture-1{
+    background: url("images/slide_picture_1.png")
+                #eeeeee; 
+    background-position: right;
+    background-repeat: no-repeat;
+    min-height: 413px;  
+
+}
+
+.slider-picture-2{
+    background: url(images/slide_picture_2.jpg);
+    background-position: right;
+    background-repeat: no-repeat;
+    min-height: 413px;  
+}
+
+.slider-picture-3{
+    background: url(images/slide_picture_3.jpg);
+    background-position: right;
+    background-repeat: no-repeat;
+    min-height: 413px;  
+}
+.slider-btn{
+    position: absolute;
+    
+  
+}
+
+.slider-text{
+    position: absolute;
+    
+  
+}
 
 .advantages{
   max-width:300px;
@@ -235,10 +274,9 @@ vertical-align: middle;
 
 .partner{
   opacity:0.2;
-  display: inline-block; 
-  position: relative;
+
   vertical-align:middle;
-  margin:20px; 
+
  
 }
 
@@ -250,6 +288,27 @@ vertical-align: middle;
 .partner:active{
     opacity:0,1;
  
+}
+
+.big-divider {
+  width: 1160px;
+  height: 2px;
+  background-color:#cccccc; 
+  margin: 0px 0px 65px 0px;
+}
+
+.big-divider-bottom {
+  width: 1160px;
+  height: 2px;
+  background-color:#cccccc; 
+  margin: 65px 0px 65px 0px;
+}
+
+.small-divider {
+  width: 2px;
+  height: 52px;
+  background-color:#cccccc; 
+
 }
 
 .grey-circle {
