--- a/css/styles.css
+++ b/css/styles.css
@@ -620,7 +620,7 @@ justify-content:space-between;
   list-style-type: none;
   flex-wrap: wrap;
   margin: 30px 0px 0px 0px;
-  justify-content: flex-end;
+
 }
 
 .page-name {
@@ -802,6 +802,13 @@ input[type="checkbox"]:checked+label .checkbox-off {
   font-size: 36px;
 }
 
+.map{
+    align-content: center;
+    text-align: center;
+    border: 0;
+}
+
+
 .white-back {
   width: 960px;
   height: 590px;
@@ -811,9 +818,7 @@ input[type="checkbox"]:checked+label .checkbox-off {
   bottom: 180px;
   left:50%;
   transform: translateX(-50%);
-
 }
-
 
 .popup-content{
   right: 100px;
@@ -1076,7 +1081,6 @@ input[type="checkbox"]:checked+label .checkbox-off {
 
 .sort-filter {
   display: flex;
-  justify-content: flex-end;
   margin: 0px 0px 0px 0px;
 }
 
@@ -1093,7 +1097,6 @@ input[type="checkbox"]:checked+label .checkbox-off {
 }
 
 .sort-by-column-2 {
-  min-width: 360px;
 }
 
 .sort-filter-name {
